# lituyamon

./: .gitignore  Monitor.py  README.md  grafana.sh  lituyamon.conf.default  pg.sh  pyproject.toml  run.sh  setup.py
boot/: config.txt  wpa_supplicant.conf
dockersim/: metrics-data.sql  metrics.sql  simulate_data.py
etc/: grafana-dashboard.json  grafana-map.json  lituyamon.conf.default  lituyamon.json
etc/systemd/: lituya-mqtt.service  lituyamon.service  lituyamond.service  network-check.service  network-check.timer
lituya-mqtt/: cerbo-keepalive.sh  lituya-cerbo-read.sh  lituya-read-sensor.py  telegraph-parsing.conf
lituyamon/: Monitor.py
src/: Sensor.py  lituyamon.py
test/: test_Monitor.py
tests/: test_Monitor.py  test_lituyamon.py
