[tool.poetry]
name = "lituyamon"
version = "1.2.1"
description = "Boat monitor in python"
authors = ["Matt Jones <gitcode@magisa.org>"]
readme = "README.md"
homepage = "https://github.com/mbjones/lituyamon"
license = "Apache-2.0"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
packages = [{include = "*", from="src"}]
#packages = [{include = "lituyamon", from="src"}]

[tool.poetry.dependencies]
python = "^3.7"
apscheduler = "3.6.3"
gpiozero = "1.6.2"
numpy = "1.16.2"
adafruit-dht = "1.4.0"
rpi-gpio = "0.7.0"
spidev = "3.5"
tzlocal = "^2.0"

urllib3 = "1.22"
paho-mqtt = "^2.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lituyamond = "lituyamon:main"
